Bug 1350243 - Combine e10s and non-e10s code paths when reacting to datalist updates. r=MattN, a=gchang

MozReview-Commit-ID: 1O3wAzzwWAR